# FlatClaw

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md
.github/workflows/: publish-inference-dev.yml  publish-inference.yml
branding/: NOTICE.md
console/: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  next.config.ts  package-lock.json  package.json  skills-overview.md
console/.githooks/: post-checkout
console/.github/: PULL_REQUEST_TEMPLATE.md
console/.github/ISSUE_TEMPLATE/: issue.md
console/scripts/: probe-agent-history-latency.mjs  probe-fleet-latency.mjs  verify-native-runtime.mjs
console/server/: install-context.d.ts  install-context.js  studio-settings.js
console/src/: instrumentation.ts
console/src/app/: globals.css  layout.tsx  page.tsx
console/tests/e2e/: agent-avatar.spec.ts  agent-ia-split.spec.ts  agent-inspect-panel.spec.ts  (+4 more)
flatclaw-memory/: README.md  pyproject.toml
flatclaw-memory/flatclaw_memory/: benchmark.py  embeddings.py  schema.sql  server.py  store.py
infra/: README.md
infra/inference/: .dockerignore  Dockerfile  README.md  entrypoint.sh
infra/inference-dev/: Dockerfile  entrypoint.sh
infra/scripts/: destroy-tenant.sh  provision-tenant.sh
ragflow-config/: README.md
skills/: README.md
web/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/components/: ArchitectureDiagram.tsx  FeatureGrid.tsx  Hero.tsx  Roadmap.tsx  Section.tsx  SiteFooter.tsx  SiteNav.tsx
web/styles/: globals.css
(+144 files in other folders)
