[project]
name = "flatclaw-memory"
version = "0.0.0"
description = "Method-of-loci memory layer on ChromaDB + SQLite. BSD/MIT-compatible deps only."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "chromadb>=0.5",
  "pydantic>=2.9",
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
